--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,6 @@
 galaxy_info:
   author: Lee Dobryden
-
   license: license (BSD)
-
   min_ansible_version: 1.2
 
   #
@@ -10,7 +8,7 @@ galaxy_info:
   # the ones that apply to your role. If you don't see your
   # platform on this list, let us know and we'll get it added!
   #
-  #platforms:
+  platforms:
   #- name: OpenBSD
   #  versions:
   #  - all
@@ -120,7 +118,7 @@ galaxy_info:
   #  - vivid
   #  - wily
   #  - xenial
-    - yakkety
+     - yakkety
   #- name: Debian
   #  versions:
   #  - all
